tests/ui/drop/missing-drop-method.stderr
error[E0046]: not all trait items implemented, missing: `drop`
  --> $DIR/missing-drop-method.rs:2:1
   |
LL | impl Drop for DropNoMethod {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: default implementation of `drop` is unstable
   = note: use of unstable library feature `pin_ergonomics`
   = note: see issue #130494 <https://github.com/rust-lang/rust/issues/130494> for more information
   = help: add `#![feature(pin_ergonomics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
